# lang-est-festschrift

./: AUTHORS  Links.md  README  configure.ac  est.md  index.md  src-cg3-functions.cg3.md  src-fst-affixes-exceptional_declinations.lexc.md  src-fst-affixes-gi.lexc.md  src-fst-affixes-regular_declinations.lexc.md  src-fst-affixes-verbs.lexc.md  src-fst-phonology.twolc.md  src-fst-root.lexc.md  src-fst-stems-acronyms.lexc.md  src-phonetics-txt2ipa.xfscript.md  src-transcriptions-transcriptor-abbrevs2text.lexc.md  src-transcriptions-transcriptor-numbers-digit2text.lexc.md  tools-grammarcheckers-grammarchecker.cg3.md  tools-tokenisers-tokeniser-disamb-gt-desc.pmscript.md  tools-tokenisers-tokeniser-gramcheck-gt-desc.pmscript.md
am-shared/: src-dir-include.am  tools-mt-apertium-dir-include.am
doc/: EstonianDocumentation.jspwiki  Links.jspwiki  Makefile.am  WhatIsThis.jspwiki  est-phon-phonology.jspwiki  est.jspwiki  exceptional_declinations-affixes.jspwiki  gi-affixes.jspwiki  nouns-affixes.jspwiki  propernouns-affixes.jspwiki  root-morphology.jspwiki  verbs-affixes.jspwiki
src/: Makefile.am  reorder-usage-tags.regex
src/filters/: Makefile.am  block-compounds.est.xfscript  block-derivations.est.xfscript  compound-filter.est.xfscript  disallow-derivations.est.xfscript  downcase-derived_proper-strings.est.xfscript  evaluate-flags.est.xfscript  initialise-flags.est.xfscript  modify-derivations.est.xfscript  numeral-filter.est.xfscript  remove-non-gi-forms.est.xfscript  remove-pl-forms.est.xfscript  remove-sg-forms.est.xfscript  remove-sg-nom-forms.est.xfscript  reorder-tags.est.xfscript  wordpair-filter.est.xfscript
src/fst/: Makefile.am  root.lexc
src/import/: adjectives.lexc  adverbs.lexc  bad_after_nom3.sed  badfinal3_N.sed  badfinal_A.sed  badfinal_N.sed  cardinalnumerals.lexc  comparative_adjectives.lexc  diacritics.sed  diacritics2.sed  final_components.lexc  fs_gt.inflecting  fs_gt.noninfl  fs_lex  fs_lex.unhandled  fs_lex2algvorm.sed  fs_lex2gt.sh  fs_lex2lemma.sed  fs_lex2pluraletantum.sh  fs_lex2tyyp.sed  fs_lex2verblemma.sed  fs_pref2gt.sh  fs_suf2gt.sh  fsgt2final.sh  lemma2twol.sed  no_nomstem_first.sed  nomstem_first_eit.sed  nomstem_first_koon.sed  nomstem_first_piim.sed  noninfecting_adjectives.lexc  noninflecting_adjectives.lexc  nouns.lexc  numerals.lexc  post_lex2lemma.sed  prefixes.lexc  pronouns.lexc  pronouns_exceptions.handmade  proper_names.lexc  propernouns.lexc  verbs.lexc
src/morphology/: Makefile.am  acronyms.lexc  guesser.lexc  lexlang.xfscript  noncomp.lexc  nonfcomp.lexc  num_final.lexc  num_initial.lexc  pair_final.lexc  pair_initial.lexc  punctuation.lexc  root.lexc
src/morphology/affixes/: adjectives.lexc  declinations.lexc  exceptional_declinations.lexc  gi.lexc  nouns.lexc  pronouns.lexc  propernouns.lexc  regular_declinations.lexc  verbs.lexc
src/morphology/stems/: abbreviations.lexc  acronyms.lexc  adjectives.lexc  adjectives.xml  adpositions.lexc  adpositions.xml  adverbs.lexc  adverbs.xml  cardinalnumerals.lexc  comparative_adjectives.lexc  conjunctions.lexc  conjunctions.xml  final_components.lexc  genitive_attributes.lexc  interjections.lexc  interjections.xml  noninfecting_verbs.lexc  noninflecting_adjectives.lexc  noninflecting_verbs.lexc  nouns.lexc  nouns.xml  numbers.lexc  numerals.lexc  ordinalnumerals.lexc  particles.lexc  particles.xml  prefixes.lexc  pronouns.lexc  pronouns.xml  proper_names.lexc  propernouns.lexc  propernouns.xml  punctuation.lexc  quantifiers.lexc  quantifiers.xml  superlative_adjectives.lexc  verbs.lexc  verbs.xml
src/orthography/: Makefile.am  allcaps.xfscript  downcase-derived_proper-strings.xfscript.in  inituppercase.regex  spellrelax.regex
src/phonology/: est-phon.twolc
src/scripts/: tagshuffle.pl
src/syntax/: disambiguation.cg3
src/transcriptions/: transcriptor-numbers-digit2text.lexc
test/src/: Makefile.am  run-gt-desc-anayaml-testcases.sh  run-gt-desc-genyaml-testcases.sh  run-gt-norm-yaml-testcases.sh
test/src/gt-desc-yamls/: N2-Oct_2016_gt-desc.yaml  V1-Oct_2016_gt-desc.yaml
test/src/gt-norm-yamls/: A-Oct_2016_gt-norm.yaml  N-Oct_2016_gt-norm.yaml  N-nouns1-Oct_2016_gt-norm.yaml  N-nouns2-Oct_2016_gt-norm.yaml  N1-Oct_2016_gt-norm.yaml  N2-Oct_2016_gt-norm.yaml  Nov_2016_gt-norm.yaml  Num-Oct_2016_gt-norm.yaml  Pron-Oct_2016_gt-norm.yaml  Prop-Oct_2016_gt-norm.yaml  V-verbs1-Oct_2016_gt-norm.yaml  V-verbs1_gt-norm.yaml  V-verbs2_gt-norm.yaml  V-verbs_gt-norm.yaml  V1-Oct_2016_gt-norm.yaml  V2-Oct_2016_gt-norm.yaml
test/src/morphology/: generate-adjective-lemmas.sh.in  generate-verb-lemmas.sh.in  tag_test.sh
test/src/phonology/: Makefile.am
test/tmp/: eitunne.hfst  test.sh
test/tools/spellcheckers/fstbased/desktop/hfst/: accept-all-lemmas.sh.in
test/tools/spellcheckers/fstbased/fstspeller-gt-norm-yamls/: spellertests_fstspeller-gt-norm.yaml
test/tools/spellcheckers/speller-gt-norm-yamls/: basespellertests_speller-gt-norm.yaml
tools/grammarcheckers/: errors.source.xml  grammarchecker.cg3
tools/mt/apertium/tagsets/: modify-tags.regex
tools/spellcheckers/: Makefile.mod-desktop-hfst.am
tools/spellcheckers/fstbased/desktop/: spellercorpus.uniq.txt
tools/spellcheckers/fstbased/desktop/hfst/: Makefile.am
tools/spellcheckers/fstbased/mobile/hfst/: Makefile.am
tools/tokenisers/: tokeniser-disamb-gt-desc.pmscript  tokeniser-gramcheck-gt-desc.pmscript
